// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IDPSection /> should render (IDPs pending) 1`] = `
<Card>
  <CardHeader>
    <Skeleton
      isDark={false}
      size="md"
    />
  </CardHeader>
  <CardBody>
    <Skeleton
      isDark={false}
      size="lg"
    />
  </CardBody>
  <CardFooter>
    <Skeleton
      isDark={false}
      size="md"
    />
  </CardFooter>
</Card>
`;

exports[`<IDPSection /> should render (no IDPs) 1`] = `
<Card>
  <CardBody>
    <Title
      headingLevel="h3"
      size="lg"
    >
      Identity Providers
    </Title>
    <p>
      Configure identity providers to allow users to log into the cluster.
       
      <a
        href="https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <Component
      className="access-control-add"
      onClick={[Function]}
      variant="secondary"
    >
      Add identity provider
    </Component>
  </CardBody>
</Card>
`;

exports[`<IDPSection /> should render (with IDPs) 1`] = `
<Card>
  <CardBody>
    <Title
      headingLevel="h3"
      size="lg"
    >
      Identity Providers
    </Title>
    <p>
      Configure identity providers to allow users to log into the cluster.
       
      <a
        href="https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <Component
      actions={
        Array [
          Object {
            "className": "hand-pointer",
            "onClick": [Function],
            "title": "Delete",
          },
        ]
      }
      aria-label="Identity Providers"
      cells={
        Array [
          Object {
            "title": "Name",
            "transforms": Array [
              [Function],
            ],
          },
          Object {
            "title": "Type",
            "transforms": Array [
              [Function],
            ],
          },
          Object {
            "title": "Auth Callback URL",
            "transforms": Array [
              [Function],
            ],
          },
        ]
      }
      rows={
        Array [
          Object {
            "cells": Array [
              "hello",
              "GitHub",
              Object {
                "title": <ClipboardCopyLinkButton
                  className="idp-table-copy"
                  isDisabled={false}
                  text="https://oauth-openshift.com/oauth2callback/hello"
                >
                  Copy URL to clipboard
                </ClipboardCopyLinkButton>,
              },
            ],
            "idpID": "id",
          },
          Object {
            "cells": Array [
              "hi",
              "Google",
              Object {
                "title": <ClipboardCopyLinkButton
                  className="idp-table-copy"
                  isDisabled={false}
                  text="https://oauth-openshift.com/oauth2callback/hi"
                >
                  Copy URL to clipboard
                </ClipboardCopyLinkButton>,
              },
            ],
            "idpID": "id",
          },
        ]
      }
      variant="compact"
    >
      <TableHeader />
      <TableBody />
    </Component>
    <Component
      className="access-control-add"
      onClick={[Function]}
      variant="secondary"
    >
      Add identity provider
    </Component>
  </CardBody>
</Card>
`;
